012 - Fix cognitive complexity calculation (#18)
* Add configuration command and remove language preference

Introduces a new 'Configuración' command and handler in plugin.xml and adds ConfigurationHandler. Removes plugin language selection from ComplexityThresholdPropertyPage and ProjectPreferences, simplifying project preferences to only handle complexity threshold.

* Refactor i18n: centralize Messages and update dialogs

Refactored the Messages class to remove project-based language selection and provide static, context-free methods for all UI strings. Updated AnalysisHistoryDialog, AnalysisMetricsDialog, and AnalysisNoRefactorDialog to use the new Messages API for all labels, titles, and messages, ensuring consistent internationalization and simplifying dialog code. Added new message keys for additional UI elements and explanations.

* Refactor CPLEX library config to PluginPreferences

Moved CPLEX library path configuration logic from Activator to a new PluginPreferences class. This improves separation of concerns and centralizes plugin preference management, including language and ILP executable path settings.

* Refactor cognitive complexity calculation and add tests

Improves the cognitive complexity calculation in Utils.java to better handle logical operator sequences, recursion, labeled break/continue, and nested/anonymous/local classes. Adds a comprehensive CognitiveComplexityTest suite covering if/else, loops, switch, try-catch, ternary, logical operators, labels, lambdas, anonymous/local classes, recursion, and edge cases.

* Merge main branch to incorporate latest upstream changes (#23)

* Load CPLEX on startup and notify user (#21)

Add startup extension and change Activator to implement IStartup so CPLEX is loaded after the workbench is ready (preferences are available). plugin.xml registers main.boot.Activator as an org.eclipse.ui.startup extension. Activator now performs earlyStartup(), attempts to load CPLEX from the configured path via PluginPre